calc/y.output

state 0
	$accept: .program $end 

	IDENT  shift 8
	NUMBER  shift 25
	INT  shift 10
	FLOAT  shift 11
	BOOL  shift 12
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	program  goto 1
	statement_list  goto 2
	statement  goto 3
	var_decl  goto 4
	assignment  goto 5
	expr  goto 6
	ternary_expr  goto 9
	logical_or_expr  goto 13
	logical_and_expr  goto 14
	equality_expr  goto 15
	relational_expr  goto 16
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21
	type_name  goto 7

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  statement_list.    (1)
	statement_list:  statement_list.SEMICOLON statement 

	SEMICOLON  shift 29
	.  reduce 1 (src line 89)


state 3
	statement_list:  statement.    (2)

	.  reduce 2 (src line 97)


state 4
	statement:  var_decl.    (4)

	.  reduce 4 (src line 114)


state 5
	statement:  assignment.    (5)

	.  reduce 5 (src line 116)


state 6
	statement:  expr.    (6)

	.  reduce 6 (src line 117)


state 7
	var_decl:  type_name.var_list 

	IDENT  shift 31
	.  error

	var_list  goto 30

state 8
	assignment:  IDENT.ASSIGN expr 
	primary_expr:  IDENT.    (42)

	ASSIGN  shift 32
	.  reduce 42 (src line 369)


state 9
	expr:  ternary_expr.    (14)

	.  reduce 14 (src line 158)


state 10
	type_name:  INT.    (10)

	.  reduce 10 (src line 141)


state 11
	type_name:  FLOAT.    (11)

	.  reduce 11 (src line 143)


state 12
	type_name:  BOOL.    (12)

	.  reduce 12 (src line 144)


state 13
	ternary_expr:  logical_or_expr.    (15)
	ternary_expr:  logical_or_expr.QUESTION expr COLON ternary_expr 
	logical_or_expr:  logical_or_expr.OR logical_and_expr 

	QUESTION  shift 33
	OR  shift 34
	.  reduce 15 (src line 162)


state 14
	logical_or_expr:  logical_and_expr.    (17)
	logical_and_expr:  logical_and_expr.AND equality_expr 

	AND  shift 35
	.  reduce 17 (src line 177)


state 15
	logical_and_expr:  equality_expr.    (19)
	equality_expr:  equality_expr.EQ relational_expr 
	equality_expr:  equality_expr.NE relational_expr 

	EQ  shift 36
	NE  shift 37
	.  reduce 19 (src line 192)


state 16
	equality_expr:  relational_expr.    (21)
	relational_expr:  relational_expr.LT additive_expr 
	relational_expr:  relational_expr.LE additive_expr 
	relational_expr:  relational_expr.GT additive_expr 
	relational_expr:  relational_expr.GE additive_expr 

	LT  shift 38
	LE  shift 39
	GT  shift 40
	GE  shift 41
	.  reduce 21 (src line 207)


state 17
	relational_expr:  additive_expr.    (24)
	additive_expr:  additive_expr.PLUS multiplicative_expr 
	additive_expr:  additive_expr.MINUS multiplicative_expr 

	PLUS  shift 42
	MINUS  shift 43
	.  reduce 24 (src line 230)


state 18
	additive_expr:  multiplicative_expr.    (29)
	multiplicative_expr:  multiplicative_expr.MULTIPLY power_expr 
	multiplicative_expr:  multiplicative_expr.DIVIDE power_expr 
	multiplicative_expr:  multiplicative_expr.MOD power_expr 

	MULTIPLY  shift 44
	DIVIDE  shift 45
	MOD  shift 46
	.  reduce 29 (src line 269)


state 19
	multiplicative_expr:  power_expr.    (32)

	.  reduce 32 (src line 292)


state 20
	power_expr:  unary_expr.    (36)
	power_expr:  unary_expr.POWER power_expr 

	POWER  shift 47
	.  reduce 36 (src line 323)


state 21
	unary_expr:  primary_expr.    (38)

	.  reduce 38 (src line 338)


state 22
	unary_expr:  PLUS.unary_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	unary_expr  goto 48
	primary_expr  goto 21

state 23
	unary_expr:  MINUS.unary_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	unary_expr  goto 50
	primary_expr  goto 21

state 24
	unary_expr:  NOT.unary_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	unary_expr  goto 51
	primary_expr  goto 21

state 25
	primary_expr:  NUMBER.    (43)

	.  reduce 43 (src line 377)


state 26
	primary_expr:  TRUE.    (44)

	.  reduce 44 (src line 384)


state 27
	primary_expr:  FALSE.    (45)

	.  reduce 45 (src line 391)


state 28
	primary_expr:  LPAREN.expr RPAREN 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	expr  goto 52
	ternary_expr  goto 9
	logical_or_expr  goto 13
	logical_and_expr  goto 14
	equality_expr  goto 15
	relational_expr  goto 16
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 29
	statement_list:  statement_list SEMICOLON.statement 

	IDENT  shift 8
	NUMBER  shift 25
	INT  shift 10
	FLOAT  shift 11
	BOOL  shift 12
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	statement  goto 53
	var_decl  goto 4
	assignment  goto 5
	expr  goto 6
	ternary_expr  goto 9
	logical_or_expr  goto 13
	logical_and_expr  goto 14
	equality_expr  goto 15
	relational_expr  goto 16
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21
	type_name  goto 7

state 30
	var_decl:  type_name var_list.    (7)
	var_list:  var_list.COMMA IDENT 

	COMMA  shift 54
	.  reduce 7 (src line 120)


state 31
	var_list:  IDENT.    (8)

	.  reduce 8 (src line 130)


state 32
	assignment:  IDENT ASSIGN.expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	expr  goto 55
	ternary_expr  goto 9
	logical_or_expr  goto 13
	logical_and_expr  goto 14
	equality_expr  goto 15
	relational_expr  goto 16
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 33
	ternary_expr:  logical_or_expr QUESTION.expr COLON ternary_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	expr  goto 56
	ternary_expr  goto 9
	logical_or_expr  goto 13
	logical_and_expr  goto 14
	equality_expr  goto 15
	relational_expr  goto 16
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 34
	logical_or_expr:  logical_or_expr OR.logical_and_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	logical_and_expr  goto 57
	equality_expr  goto 15
	relational_expr  goto 16
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 35
	logical_and_expr:  logical_and_expr AND.equality_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	equality_expr  goto 58
	relational_expr  goto 16
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 36
	equality_expr:  equality_expr EQ.relational_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	relational_expr  goto 59
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 37
	equality_expr:  equality_expr NE.relational_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	relational_expr  goto 60
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 38
	relational_expr:  relational_expr LT.additive_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	additive_expr  goto 61
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 39
	relational_expr:  relational_expr LE.additive_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	additive_expr  goto 62
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 40
	relational_expr:  relational_expr GT.additive_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	additive_expr  goto 63
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 41
	relational_expr:  relational_expr GE.additive_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	additive_expr  goto 64
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 42
	additive_expr:  additive_expr PLUS.multiplicative_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	multiplicative_expr  goto 65
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 43
	additive_expr:  additive_expr MINUS.multiplicative_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	multiplicative_expr  goto 66
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 44
	multiplicative_expr:  multiplicative_expr MULTIPLY.power_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	power_expr  goto 67
	unary_expr  goto 20
	primary_expr  goto 21

state 45
	multiplicative_expr:  multiplicative_expr DIVIDE.power_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	power_expr  goto 68
	unary_expr  goto 20
	primary_expr  goto 21

state 46
	multiplicative_expr:  multiplicative_expr MOD.power_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	power_expr  goto 69
	unary_expr  goto 20
	primary_expr  goto 21

state 47
	power_expr:  unary_expr POWER.power_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	power_expr  goto 70
	unary_expr  goto 20
	primary_expr  goto 21

state 48
	unary_expr:  PLUS unary_expr.    (39)

	.  reduce 39 (src line 343)


state 49
	primary_expr:  IDENT.    (42)

	.  reduce 42 (src line 369)


state 50
	unary_expr:  MINUS unary_expr.    (40)

	.  reduce 40 (src line 351)


state 51
	unary_expr:  NOT unary_expr.    (41)

	.  reduce 41 (src line 359)


state 52
	primary_expr:  LPAREN expr.RPAREN 

	RPAREN  shift 71
	.  error


state 53
	statement_list:  statement_list SEMICOLON statement.    (3)

	.  reduce 3 (src line 102)


state 54
	var_list:  var_list COMMA.IDENT 

	IDENT  shift 72
	.  error


state 55
	assignment:  IDENT ASSIGN expr.    (13)

	.  reduce 13 (src line 147)


state 56
	ternary_expr:  logical_or_expr QUESTION expr.COLON ternary_expr 

	COLON  shift 73
	.  error


state 57
	logical_or_expr:  logical_or_expr OR logical_and_expr.    (18)
	logical_and_expr:  logical_and_expr.AND equality_expr 

	AND  shift 35
	.  reduce 18 (src line 182)


state 58
	logical_and_expr:  logical_and_expr AND equality_expr.    (20)
	equality_expr:  equality_expr.EQ relational_expr 
	equality_expr:  equality_expr.NE relational_expr 

	EQ  shift 36
	NE  shift 37
	.  reduce 20 (src line 197)


state 59
	equality_expr:  equality_expr EQ relational_expr.    (22)
	relational_expr:  relational_expr.LT additive_expr 
	relational_expr:  relational_expr.LE additive_expr 
	relational_expr:  relational_expr.GT additive_expr 
	relational_expr:  relational_expr.GE additive_expr 

	LT  shift 38
	LE  shift 39
	GT  shift 40
	GE  shift 41
	.  reduce 22 (src line 212)


state 60
	equality_expr:  equality_expr NE relational_expr.    (23)
	relational_expr:  relational_expr.LT additive_expr 
	relational_expr:  relational_expr.LE additive_expr 
	relational_expr:  relational_expr.GT additive_expr 
	relational_expr:  relational_expr.GE additive_expr 

	LT  shift 38
	LE  shift 39
	GT  shift 40
	GE  shift 41
	.  reduce 23 (src line 220)


state 61
	relational_expr:  relational_expr LT additive_expr.    (25)
	additive_expr:  additive_expr.PLUS multiplicative_expr 
	additive_expr:  additive_expr.MINUS multiplicative_expr 

	PLUS  shift 42
	MINUS  shift 43
	.  reduce 25 (src line 235)


state 62
	relational_expr:  relational_expr LE additive_expr.    (26)
	additive_expr:  additive_expr.PLUS multiplicative_expr 
	additive_expr:  additive_expr.MINUS multiplicative_expr 

	PLUS  shift 42
	MINUS  shift 43
	.  reduce 26 (src line 243)


state 63
	relational_expr:  relational_expr GT additive_expr.    (27)
	additive_expr:  additive_expr.PLUS multiplicative_expr 
	additive_expr:  additive_expr.MINUS multiplicative_expr 

	PLUS  shift 42
	MINUS  shift 43
	.  reduce 27 (src line 251)


state 64
	relational_expr:  relational_expr GE additive_expr.    (28)
	additive_expr:  additive_expr.PLUS multiplicative_expr 
	additive_expr:  additive_expr.MINUS multiplicative_expr 

	PLUS  shift 42
	MINUS  shift 43
	.  reduce 28 (src line 259)


state 65
	additive_expr:  additive_expr PLUS multiplicative_expr.    (30)
	multiplicative_expr:  multiplicative_expr.MULTIPLY power_expr 
	multiplicative_expr:  multiplicative_expr.DIVIDE power_expr 
	multiplicative_expr:  multiplicative_expr.MOD power_expr 

	MULTIPLY  shift 44
	DIVIDE  shift 45
	MOD  shift 46
	.  reduce 30 (src line 274)


state 66
	additive_expr:  additive_expr MINUS multiplicative_expr.    (31)
	multiplicative_expr:  multiplicative_expr.MULTIPLY power_expr 
	multiplicative_expr:  multiplicative_expr.DIVIDE power_expr 
	multiplicative_expr:  multiplicative_expr.MOD power_expr 

	MULTIPLY  shift 44
	DIVIDE  shift 45
	MOD  shift 46
	.  reduce 31 (src line 282)


state 67
	multiplicative_expr:  multiplicative_expr MULTIPLY power_expr.    (33)

	.  reduce 33 (src line 297)


state 68
	multiplicative_expr:  multiplicative_expr DIVIDE power_expr.    (34)

	.  reduce 34 (src line 305)


state 69
	multiplicative_expr:  multiplicative_expr MOD power_expr.    (35)

	.  reduce 35 (src line 313)


state 70
	power_expr:  unary_expr POWER power_expr.    (37)

	.  reduce 37 (src line 328)


state 71
	primary_expr:  LPAREN expr RPAREN.    (46)

	.  reduce 46 (src line 398)


state 72
	var_list:  var_list COMMA IDENT.    (9)

	.  reduce 9 (src line 135)


state 73
	ternary_expr:  logical_or_expr QUESTION expr COLON.ternary_expr 

	IDENT  shift 49
	NUMBER  shift 25
	TRUE  shift 26
	FALSE  shift 27
	LPAREN  shift 28
	PLUS  shift 22
	MINUS  shift 23
	NOT  shift 24
	.  error

	ternary_expr  goto 74
	logical_or_expr  goto 13
	logical_and_expr  goto 14
	equality_expr  goto 15
	relational_expr  goto 16
	additive_expr  goto 17
	multiplicative_expr  goto 18
	power_expr  goto 19
	unary_expr  goto 20
	primary_expr  goto 21

state 74
	ternary_expr:  logical_or_expr QUESTION expr COLON ternary_expr.    (16)

	.  reduce 16 (src line 167)


35 terminals, 19 nonterminals
47 grammar rules, 75/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
68 working sets used
memory: parser 149/240000
54 extra closures
237 shift entries, 1 exceptions
40 goto entries
109 entries saved by goto default
Optimizer space used: output 81/240000
81 table entries, 0 zero
maximum spread: 33, maximum offset: 73
